[package]
name = "stm32f303re_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = {version = "0.7", features = ["inline-asm"]}
cortex-m-rt = "0.6.12"
panic-itm = { version = "0.4.1" }

[dependencies.stm32f3]
features = ["stm32f303", "rt"]
version = "0.13.0"

[dependencies.kern]
path = "../../sys/kern"
default-features = false

[[bin]]
name = "stm32f303re_demo"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = 2 # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "z" # smaller optimizations