[package]
name = "stm32l432kc_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = {version = "0.7", features = ["inline-asm"]}
cortex-m-rt = "0.6.12"
panic-itm = { version = "0.4.1" }
fugit = "0.3.5"

[dependencies.stm32l432kc]
features = ["rt"]
path = "../../boards/stm32l432kc"

[dependencies.stm32l4xx-hal]
version = "0.7.0"
default_features = false
features = ["stm32l432"]

[dependencies.kern]
path = "../../sys/kern"
default-features = false
features = ["l432kc"]

[[bin]]
name = "stm32l432kc_demo"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = 2 # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "z" # smaller optimizations