[package]
name = "stm32l476rg_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = {version = "0.7", features = ["inline-asm"]}
cortex-m-rt = "0.6.12"
panic-itm = { version = "0.4.1" }
fugit = "0.3.5"

[dependencies.stm32l476rg]
features = ["rt"]
path = "../../boards/stm32l476rg"

[dependencies.kern]
path = "../../sys/kern"
default-features = false
features = ["l476rg"] #, "log-itm"]

[[bin]]
name = "stm32l476rg_demo"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = 2 # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "z" # smaller optimizations