[package]
name = "kern"
version = "0.1.0"
edition = "2021"

[dependencies]
abi = {path = "../abi"}
zerocopy = "0.6.1"
byteorder = { version = "1.3.4", default-features = false }
bitflags = "1.2.1"
cfg-if = "1"
cortex-m = {version = "0.7", features = ["inline-asm"]}
serde = { version = "1.0.114", default-features = false }
ssmarshal = { version = "1.0.0", default-features = false }
unwrap-lite = { path = "../../libs/unwrap-lite" }
hbf_lite = { path = "../../libs/hbf_lite" }
flash_allocator = { path = "../../libs/flash_allocator" }
heapless = "0.7.16"

[build-dependencies]
serde = "1"
ron = "0.7"
abi = {path = "../abi"}

[lib]
test = false
bench = false
