[package]
name = "kern"
version = "0.1.0"
edition = "2021"

[features]
log-enabled = []
log-itm = ["log-enabled"]
log-semihosting = ["log-enabled", "dep:cortex-m-semihosting"]
f303re = ["dep:stm32f303re"]
l432kc = ["dep:stm32l432kc"]
l476rg = ["dep:stm32l476rg"]

[dependencies]
abi = {path = "../abi"}
zerocopy = "0.6.1"
byteorder = { version = "1.3.4", default-features = false }
bitflags = "1.2.1"
cfg-if = "1"
bstringify = "0.1.2"
paste = "1"
cortex-m = {version = "0.7", features = ["inline-asm"]}
serde = { version = "1.0.114", default-features = false }
ssmarshal = { version = "1.0.0", default-features = false }
unwrap-lite = { path = "../../libs/unwrap-lite" }
hbf_lite = { path = "../../libs/hbf_lite", default-features = false}
flash_allocator = { path = "../../libs/flash_allocator" }
heapless = "0.7.16"
cortex-m-semihosting =  { version = "0.5.0", optional=true}
# Board dependencies
stm32f303re = {path = "../../boards/stm32f303re", optional=true}
stm32l432kc = {path = "../../boards/stm32l432kc", optional=true}
stm32l476rg = {path = "../../boards/stm32l476rg", optional=true}

[build-dependencies]
serde = "1"
ron = "0.7"
abi = {path = "../abi"}

[lib]
test = false
bench = false
