[package]
name = "bthermo"
version = "0.1.0"
edition = "2021"

[features]
stm32f303re = ["rcc-api/stm32f303re", "dep:stm32f303re"]

[dependencies]
bthermo-api = {path = "../api"}
userlib = {path = "../../../sys/userlib", features=["log-itm"]}
cortex-m = { version = "0.7", features = ["inline-asm"] }
rcc-api = {path = "../../rcc/api"}
zerocopy = "0.6.1"
serde = { version = "1.0.114", default-features = false, features = ["derive"] }
heapless = "0.7.16"
ringbuffer = {version="0.8.5", default-features = false}

# Device-specific dependencies.
# Each board supported will have its section below
[dependencies.stm32f303re]
path = "../../../boards/stm32f303re"
optional = true

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "bthermo"
test = false
bench = false
