[package]
name = "bthermo"
version = "0.1.0"
edition = "2021"

[features]
board_stm32l476rg = ["rcc-api/stm32l476rg", "dep:stm32l476rg"]

[dependencies]
bthermo-api = {path = "../api"}
userlib = {path = "../../../sys/userlib", features=["log-itm"]}
cortex-m = { version = "0.7", features = ["inline-asm"] }
zerocopy = "0.6.1"
serde = { version = "1.0.114", default-features = false, features = ["derive"] }
heapless = "0.7.16"
ringbuffer = {version="0.8.5", default-features = false}
# Component dependencies
rcc-api = {path = "../../rcc/api"}

# Device-specific dependencies.
# Each board supported will have its section below
[dependencies.stm32l476rg]
path = "../../../boards/stm32l476rg"
optional = true

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "bthermo"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = 2 # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "z" # smaller optimizations
