[package]
name = "rcc"
version = "0.1.0"
edition = "2021"

[features]
log-itm = ["userlib/log-itm"]
log-semihosting = ["dep:cortex-m-semihosting", "userlib/log-semihosting"]
board_stm32f303re = ["rcc-api/stm32f303re", "dep:stm32f303re"]
board_stm32l432kc = ["rcc-api/stm32l432kc", "dep:stm32l432kc"]

[dependencies]
rcc-api = {path = "../api"}
# Other-dependencies
userlib = {path = "../../../sys/userlib"}
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-semihosting =  { version = "0.5.0", optional=true}
zerocopy = "0.6.1"

[dependencies.stm32f303re]
path = "../../../boards/stm32f303re"
optional = true

[dependencies.stm32l432kc]
path = "../../../boards/stm32l432kc"
optional = true

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "rcc"
test = false
bench = false