[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[features]
stm32f303re = ["dep:stm32f303re"]

[dependencies]
storage-api = {path = "../api"}
userlib = {path = "../../../sys/userlib", features=["log-itm"]}
cortex-m = { version = "0.7", features = ["inline-asm"] }
cfg-if = "1.0.0"
# Component dependencies
flash_allocator = {path = "../../../libs/flash_allocator"}
ram_allocator = {path = "../../../libs/ram_allocator"}

# Board list
[dependencies.stm32f303re]
path = "../../../boards/stm32f303re"
optional = true

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "storage"
test = false
bench = false