[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[features]
log-itm = ["userlib/log-itm"]
log-semihosting = ["dep:cortex-m-semihosting", "userlib/log-semihosting"]
board_stm32f303re = ["dep:stm32f303re"]
board_stm32l432kc = ["dep:stm32l432kc"]
board_stm32l476rg = ["dep:stm32l476rg"]

[dependencies]
storage-api = {path = "../api"}
userlib = {path = "../../../sys/userlib"}
cortex-m = { version = "0.7", features = ["inline-asm"] }
cfg-if = "1.0.0"
cortex-m-semihosting =  { version = "0.5.0", optional=true}
flash_allocator = {path = "../../../libs/flash_allocator"}
ram_allocator = {path = "../../../libs/ram_allocator"}

# Board list
[dependencies.stm32f303re]
path = "../../../boards/stm32f303re"
optional = true

[dependencies.stm32l432kc]
path = "../../../boards/stm32l432kc"
optional = true

[dependencies.stm32l476rg]
path = "../../../boards/stm32l476rg"
optional = true

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "storage"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = 2 # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "z" # smaller optimizations