[package]
name = "ticker"
version = "0.1.0"
edition = "2021"

[features]
log-itm = ["userlib/log-itm"]
log-semihosting = ["dep:cortex-m-semihosting", "userlib/log-semihosting"]
# Supported boards
board_stm32f303re = []
board_stm32l432kc = []
board_stm32l476rg = []

[dependencies]
userlib = {path = "../../../sys/userlib"}
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-semihosting =  { version = "0.5.0", optional=true}

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "ticker"
test = false
bench = false