[package]
name = "uart-channel-usb"
version = "0.1.0"
edition = "2021"

[features]
board_stm32f303re = ["rcc-api/stm32f303re", "dep:stm32f303re"]

[dependencies]
uart-channel-api = {path = "../api"}
userlib = {path = "../../../sys/userlib", features=["log-itm"]}
cortex-m = { version = "0.7", features = ["inline-asm"] }
cfg-if = "1.0.0"
# Component dependencies
rcc-api = {path = "../../rcc/api"}

# Device-specific dependencies.
# Each board supported will have its section below
[dependencies.stm32f303re]
path = "../../../boards/stm32f303re"
optional = true

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "uart-channel-usb"
test = false
bench = false