[package]
name = "update"
version = "0.1.0"
edition = "2021"

[features]
board_stm32f303re = []

[dependencies]
userlib = {path = "../../../sys/userlib", features=["log-itm"]}
cortex-m = { version = "0.7", features = ["inline-asm"] }
aes-gcm = {version="0.10.1", default-features = false, features = ["aes", "heapless"] }
hbf_lite = {path = "../../../libs/hbf_lite"}
bitflags = "1.3.2"
static_assertions = "1.1.0"
# Component dependencies
storage-api = {path = "../../storage/api"}
uart-channel-api = {path = "../../uart-channel-multi-bluetooth/api"}

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "update"
test = false
bench = false