[package]
name = "update"
version = "0.1.0"
edition = "2021"

[features]
log-itm = ["userlib/log-itm"]
log-semihosting = ["dep:cortex-m-semihosting", "userlib/log-semihosting"]
board_stm32f303re = []
board_stm32l432kc = []

[dependencies]
userlib = {path = "../../../sys/userlib"}
cortex-m = { version = "0.7", features = ["inline-asm"] }
hbf_lite = {path = "../../../libs/hbf_lite"}
relocator = {path = "../../../libs/relocator"}
bitflags = "1.3.2"
static_assertions = "1.1.0"
cortex-m-semihosting =  { version = "0.5.0", optional=true}
# Component dependencies
storage-api = {path = "../../storage/api"}
uart-channel-api = {path = "../../uart-channel-usb/api"}

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "update"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = 2 # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "z" # smaller optimizations