[package]
name = "component_builder"
version = "0.0.1"
edition = "2021"
description = "A tool to generate CBF from component source and configuration file"

[dependencies]
clap = {version = "3.1.18", features = ["derive"]}
cargo_metadata = "0.15.0"
toml = "0.5.9"
serde = {version = "1.0.137", features=["derive"]}

cbf_rs = {path = "../../../libs/cbf_rs"}
board_config = {path = "../../libs/board_config"}
component_config = {path = "../../libs/component_config"}
regex = "1.7.1"