[package]
name = "system_builder"
version = "0.0.2"
edition = "2021"
description = "A tool to generate an image of the system, ready to be flashed"

[dependencies]
clap = {version = "3.1.18", features = ["derive"]}
cargo_metadata = "0.15.0"
toml = "0.5.9"
serde = {version = "1.0.137", features=["derive"]}
goblin = "0.5"
srec = "0.2.0"
hbf_rs = {path = "../../../libs/hbf_rs"}
component_builder = {path = "../component_builder"}
board_config = {path = "../../libs/board_config"}
app_config = {path = "../../libs/app_config"}
flash_allocator = {path = "../../../libs/flash_allocator"}
ram_allocator = {path = "../../../libs/ram_allocator"}

[dependencies.stm32f303re]
path = "../../../boards/stm32f303re"

[dependencies.stm32l432kc]
path = "../../../boards/stm32l432kc"