[package]
name = "update-cli"
version = "0.0.2"
edition = "2021"
description = "A tool to update Concept-OS"

[dependencies]
hbf_rs = {path = "../../../libs/hbf_rs"}
serde = {version = "1.0.144", features=["derive"]}
clap = {version = "3.2.19", features = ["derive"]}
bitflags = "1.3.2"
pbr = "1.0.3"
app_config = {path = "../../libs/app_config"}
itm = "0.3.1"
signal-hook = "0.3.14"
rumqttc = "0.17.0"
crossbeam-channel = "0.5.6"
