[package]
name = "update-tool"
version = "0.0.2"
edition = "2021"
description = "A tool to update Concept-OS"

[features]
uart = []
mqtt = []

[dependencies]
cbf_rs = {path = "../../../libs/cbf_rs"}
serde = {version = "1.0.144", features=["derive"]}
clap = {version = "3.2.19", features = ["derive"]}
bitflags = "1.3.2"
pbr = "1.0.3"
app_config = {path = "../../libs/app_config"}
itm = "0.3.1"
signal-hook = "0.3.14"
cfg-if = "1.0.0"
# Serial port dependencies
serialport = "4.2.0"
# MQTT dependencies
rumqttc = "0.17.0"
crossbeam-channel = "0.5.6"