[package]
edition = "2018"
readme = "README.md"
name = "demo-stm32f303re"
version = "0.1.0"

[features]
itm = ["panic-itm"]
semihosting = ["panic-semihosting"]

[dependencies]
cortex-m = {workspace = true, features = ["inline-asm"]}
cortex-m-rt = {workspace = true}
panic-itm = { workspace = true, optional = true }
panic-halt = { workspace = true, optional = true }
panic-semihosting = { workspace = true, optional = true }

[dependencies.stm32f3]
features = ["stm32f303", "rt"]
workspace = true
optional = true

[dependencies.kern]
path = "../../sys/kern"
default-features = false

# this lets you use `cargo fix`!
[[bin]]
name = "demo-stm32f303re"
test = false
bench = false
