[package]
edition = "2018"
readme = "README.md"
name = "demo-stm32l476rg_1"
version = "0.1.0"

[features]
itm = ["panic-itm"]
semihosting = ["panic-semihosting"]

[dependencies]
cortex-m = {workspace = true, features = ["inline-asm"]}
cortex-m-rt = {workspace = true}
panic-itm = { workspace = true, optional = true }
panic-halt = { workspace = true, optional = true }
panic-semihosting = { workspace = true, optional = true }
fugit = {workspace = true}

[dependencies.stm32l4]
features = ["stm32l4x6", "rt"]
workspace = true

[dependencies.kern]
path = "../../sys/kern"
features = ["stm32l476rg"]
default-features = false

# this lets you use `cargo fix`!
[[bin]]
name = "demo-stm32l476rg_1"
test = false
bench = false
